fully functional Google OAuth

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import '@fontsource-variable/dm-sans';
+@import '@fontsource-variable/inter';
 
 :root {
   --background: #2B1887;
