task styles done

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,14 +9,17 @@
   --header: #5D5FEF;
   --foreground: #D5CCFF;
   --task-background: #F4F2FF;
+  --task-background-checked: #e6e2fe;
   --task-prior-color-na: #D9D9D9;
   --task-prior-color-low: #01dd10;
   --task-prior-color-med: #F9D100;
   --task-prior-color-high: #E42C5F;
+  
 } 
 
 body {
   color: var(--foreground);
   background: var(--background);
+  
   font-family: Arial, Helvetica, sans-serif;
 }
